--- a/demo/ssd/training300-voc2007+2012+COCO.ipynb
+++ b/demo/ssd/training300-voc2007+2012+COCO.ipynb
@@ -16,8 +16,8 @@
     "import sys\n",
     "sys.path.append('../../')\n",
     "\n",
-    "from data import datasets\n",
-    "from data import transforms, target_transforms, augmentations, utils\n",
+    "from dl.data import datasets\n",
+    "from dl.data import transforms, target_transforms, augmentations, utils\n",
     "\n",
     "from dl.models.ssd300 import SSD300\n",
     "from dl.train import *\n",
@@ -1949,11 +1949,11 @@
     "import sys\n",
     "sys.path.append('../../')\n",
     "\n",
-    "from data import datasets\n",
-    "from data import transforms, target_transforms, augmentations, utils\n",
+    "from dl.data import datasets\n",
+    "from dl.data import transforms, target_transforms, augmentations, utils\n",
     "\n",
     "from dl.models.ssd300 import SSD300\n",
-    "from d;.train import *\n",
+    "from dl.train import *\n",
     "\n",
     "#from torchvision import transforms > not import!!\n",
     "from torch.utils.data import DataLoader\n",
