--- a/demo/ssd/debug-defaultbox.ipynb
+++ b/demo/ssd/debug-defaultbox.ipynb
@@ -16,8 +16,8 @@
     "import sys\n",
     "sys.path.append('../../')\n",
     "\n",
-    "from data import datasets\n",
-    "from data import transforms, target_transforms\n",
+    "from dl.data import datasets\n",
+    "from dl.data import transforms, target_transforms\n",
     "from dl.models.ssd300 import SSD300"
    ]
   },
