--- a/demo/ssd/training512-voc2007.ipynb
+++ b/demo/ssd/training512-voc2007.ipynb
@@ -16,8 +16,8 @@
     "import sys\n",
     "sys.path.append('../../')\n",
     "\n",
-    "from data import datasets\n",
-    "from data import transforms, target_transforms, augmentations, utils\n",
+    "from dl.data import datasets\n",
+    "from dl.data import transforms, target_transforms, augmentations, utils\n",
     "\n",
     "from dl.models.ssd512 import SSD512\n",
     "from dl.train import *\n",
