--- a/demo/ssd/training300-voc2007+2012+COCO.ipynb
+++ b/demo/ssd/training300-voc2007+2012+COCO.ipynb
@@ -1915,7 +1915,7 @@
    "source": [
     "optimizer = SGD(model.parameters(), lr=1e-3, momentum=0.9, weight_decay=5e-4) # late and not converge.\n",
     "#optimizer = Adam(model.parameters(), lr=1e-3, weight_decay=5e-4)\n",
-    "iter_sheduler = SSDIterMultiStepLR(optimizer, milestones=(160000, 200000), gamma=0.1, verbose=True)\n",
+    "iter_sheduler = IterMultiStepLR(optimizer, milestones=(160000, 200000), gamma=0.1, verbose=True)\n",
     "\n",
     "save_manager = SaveManager(modelname='ssd300-COCO', interval=10000, max_checkpoints=15, plot_yrange=(0, 8))\n",
     "log_manager = LogManager(interval=500, save_manager=save_manager, loss_interval=500, live_graph=LiveGraph((0, 8)))\n",
@@ -3783,7 +3783,7 @@
    "source": [
     "optimizer = SGD(model.parameters(), lr=1e-3, momentum=0.9, weight_decay=5e-4) # late and not converge.\n",
     "#optimizer = Adam(model.parameters(), lr=1e-3, weight_decay=5e-4)\n",
-    "iter_sheduler = SSDIterMultiStepLR(optimizer, milestones=(10000, 20000), gamma=0.1, verbose=True)\n",
+    "iter_sheduler = IterMultiStepLR(optimizer, milestones=(10000, 20000), gamma=0.1, verbose=True)\n",
     "\n",
     "save_manager = SaveManager(modelname='ssd300-voc2007+2012+coco', interval=5000, max_checkpoints=15, plot_yrange=(0, 8))\n",
     "log_manager = LogManager(interval=10, save_manager=save_manager, loss_interval=10, live_graph=LiveGraph((0, 8)))\n",
