--- a/demo/ssd/training512-voc2007.ipynb
+++ b/demo/ssd/training512-voc2007.ipynb
@@ -1126,7 +1126,7 @@
    "source": [
     "optimizer = SGD(model.parameters(), lr=1e-3, momentum=0.9, weight_decay=5e-4) # slower\n",
     "#optimizer = Adam(model.parameters(), lr=1e-3, weight_decay=5e-4) # faster\n",
-    "iter_sheduler = SSDIterMultiStepLR(optimizer, milestones=(80000, 100000), gamma=0.1, verbose=True)\n",
+    "iter_sheduler = IterMultiStepLR(optimizer, milestones=(80000, 100000), gamma=0.1, verbose=True)\n",
     "\n",
     "#save_manager = SaveManager(modelname='ssd300-voc2007++', interval=10, max_checkpoints=15, plot_yrange=(0, 8))#5000\n",
     "save_manager = SaveManager(modelname='ssd512-voc2007', interval=10000, max_checkpoints=15, plot_yrange=(0, 8))\n",
