--- a/demo/ssd/training300-voc2007+2012.ipynb
+++ b/demo/ssd/training300-voc2007+2012.ipynb
@@ -1907,7 +1907,7 @@
    "source": [
     "optimizer = SGD(model.parameters(), lr=1e-3, momentum=0.9, weight_decay=5e-4) # late and not converge.\n",
     "#optimizer = Adam(model.parameters(), lr=1e-3, weight_decay=5e-4)\n",
-    "iter_sheduler = SSDIterStepLR(optimizer, step_size=60000, gamma=0.1, verbose=True)\n",
+    "iter_sheduler = IterStepLR(optimizer, step_size=60000, gamma=0.1, verbose=True)\n",
     "\n",
     "save_manager = SaveManager(modelname='ssd300-voc2007+2012', interval=5000, max_checkpoints=15, plot_yrange=(0, 8))\n",
     "log_manager = LogManager(interval=10, save_manager=save_manager, loss_interval=10, live_graph=LiveGraph((0, 8)))\n",
