--- a/demo/ssd/training300-voc2007+2012+COCO.ipynb
+++ b/demo/ssd/training300-voc2007+2012+COCO.ipynb
@@ -16,11 +16,13 @@
     "import sys\n",
     "sys.path.append('../../')\n",
     "\n",
-    "from dl.data import datasets\n",
-    "from dl.data import transforms, target_transforms, augmentations, utils\n",
+    "from dl.data.object import datasets\n",
+    "from dl.data.object import transforms, target_transforms, augmentations, utils\n",
     "\n",
-    "from dl.models.ssd300 import SSD300\n",
-    "from dl.train import *\n",
+    "from dl.loss.ssd import SSDLoss\n",
+    "from dl.models.ssd import SSD300\n",
+    "from dl.optim.scheduler import IterMultiStepLR\n",
+    "from dl.log import *\n",
     "\n",
     "#from torchvision import transforms > not import!!\n",
     "from torch.utils.data import DataLoader\n",
