--- a/demo/ssd/training300-voc2007+2012+COCO.ipynb
+++ b/demo/ssd/training300-voc2007+2012+COCO.ipynb
@@ -1919,12 +1919,10 @@
     "#optimizer = Adam(model.parameters(), lr=1e-3, weight_decay=5e-4)\n",
     "iter_sheduler = IterMultiStepLR(optimizer, milestones=(160000, 200000), gamma=0.1, verbose=True)\n",
     "\n",
-    "save_manager = SaveManager(modelname='ssd300-COCO', interval=10000, max_checkpoints=15, plot_yrange=(0, 8))\n",
-    "log_manager = LogManager(interval=500, save_manager=save_manager, loss_interval=500, live_graph=LiveGraph((0, 8)))\n",
-    "trainer = TrainLogger(model, loss_func=SSDLoss(), optimizer=optimizer, scheduler=iter_sheduler, log_manager=log_manager)\n",
+    "save_manager = SaveManager(modelname='ssd300-COCO', interval=10000, max_checkpoints=15, plot_yrange=(0, 8), plot_interval=10)\n",
+    "trainer = TrainObjectDetectionJupyterLogger(LiveGraph(yrange=(0, 8)), SSDLoss(), model, optimizer, iter_sheduler)\n",
     "\n",
-    "#trainer.train(70, train_loader)\n",
-    "trainer.train(240000, train_loader)"
+    "trainer.train_iter(save_manager, 240000, train_loader)"
    ]
   },
   {
@@ -1951,11 +1949,13 @@
     "import sys\n",
     "sys.path.append('../../')\n",
     "\n",
-    "from dl.data import datasets\n",
-    "from dl.data import transforms, target_transforms, augmentations, utils\n",
+    "from dl.data.object import datasets\n",
+    "from dl.data.object import transforms, target_transforms, augmentations, utils\n",
     "\n",
-    "from dl.models.ssd300 import SSD300\n",
-    "from dl.train import *\n",
+    "from dl.loss.ssd import SSDLoss\n",
+    "from dl.models.ssd import SSD300\n",
+    "from dl.optim.scheduler import IterMultiStepLR\n",
+    "from dl.log import *\n",
     "\n",
     "#from torchvision import transforms > not import!!\n",
     "from torch.utils.data import DataLoader\n",
@@ -3787,12 +3787,10 @@
     "#optimizer = Adam(model.parameters(), lr=1e-3, weight_decay=5e-4)\n",
     "iter_sheduler = IterMultiStepLR(optimizer, milestones=(10000, 20000), gamma=0.1, verbose=True)\n",
     "\n",
-    "save_manager = SaveManager(modelname='ssd300-voc2007+2012+coco', interval=5000, max_checkpoints=15, plot_yrange=(0, 8))\n",
-    "log_manager = LogManager(interval=10, save_manager=save_manager, loss_interval=10, live_graph=LiveGraph((0, 8)))\n",
-    "trainer = TrainLogger(model, loss_func=SSDLoss(), optimizer=optimizer, scheduler=iter_sheduler, log_manager=log_manager)\n",
+    "save_manager = SaveManager(modelname='ssd300-voc2007+2012+coco', interval=5000, max_checkpoints=15, plot_yrange=(0, 8), plot_interval=10)\n",
+    "trainer = TrainObjectDetectionJupyterLogger(LiveGraph(yrange=(0, 8)), SSDLoss(), model, optimizer, iter_sheduler)\n",
     "\n",
-    "#trainer.train(70, train_loader)\n",
-    "trainer.train(30000, train_loader)"
+    "trainer.train_iter(save_manager, 30000, train_loader)"
    ]
   },
   {
