--- a/demo/textboxespp/pre-train-SynthText.ipynb
+++ b/demo/textboxespp/pre-train-SynthText.ipynb
@@ -58,7 +58,7 @@
     ")\n",
     "\n",
     "#train_dataset = datasets.COCO2014Text_Dataset(ignore=target_transforms.Ignore(illegible=True), transform=transform, target_transform=target_transform, augmentation=None)\n",
-    "train_dataset = datasets.SynthTextDataset(ignore=None, transform=transform, target_transform=target_transform, augmentation=augmentation)\n",
+    "train_dataset = datasets.SynthTextDetectionDataset(ignore=None, transform=transform, target_transform=target_transform, augmentation=augmentation)\n",
     "\n",
     "train_loader = DataLoader(train_dataset,\n",
     "                          batch_size=32,\n",
