--- a/demo/ssd/training300-voc2007+2012.ipynb
+++ b/demo/ssd/training300-voc2007+2012.ipynb
@@ -60,11 +60,11 @@
     ")\n",
     "target_transform = target_transforms.Compose(\n",
     "    [target_transforms.Corners2Centroids(),\n",
-    "     target_transforms.OneHot(class_nums=datasets.VOC_class_nums, add_background=True),\n",
+    "     target_transforms.ObjectDetectionOneHot(class_nums=datasets.VOC_class_nums, add_background=True),\n",
     "     target_transforms.ToTensor()]\n",
     ")\n",
     "train_dataset = datasets.Compose(datasets=(datasets.VOC2007_TrainValDataset, datasets.VOC2012_TrainValDataset),\n",
-    "                                 ignore=target_transforms.Ignore(difficult=True), transform=transform, target_transform=target_transform, augmentation=augmentation)\n",
+    "                                 ignore=target_transforms.ObjectDetectionIgnore(difficult=True), transform=transform, target_transform=target_transform, augmentation=augmentation)\n",
     "\n",
     "train_loader = DataLoader(train_dataset,\n",
     "                          batch_size=32,\n",
@@ -1959,7 +1959,7 @@
     ")\n",
     "target_transform = target_transforms.Compose(\n",
     "    [target_transforms.Corners2Centroids(),\n",
-    "     target_transforms.OneHot(class_nums=datasets.VOC_class_nums, add_background=True),\n",
+    "     target_transforms.ObjectDetectionOneHot(class_nums=datasets.VOC_class_nums, add_background=True),\n",
     "     target_transforms.ToTensor()]\n",
     ")\n",
     "\n",
