--- a/demo/textboxespp/pre-train-SynthText.ipynb
+++ b/demo/textboxespp/pre-train-SynthText.ipynb
@@ -53,11 +53,11 @@
     "target_transform = target_transforms.Compose(\n",
     "    [target_transforms.Corners2Centroids(),\n",
     "     #target_transforms.ToQuadrilateral(),\n",
-    "     target_transforms.OneHot(class_nums=datasets.SynthText_class_nums, add_background=True),\n",
+    "     target_transforms.ObjectDetectionOneHot(class_nums=datasets.SynthText_class_nums, add_background=True),\n",
     "     target_transforms.ToTensor()]\n",
     ")\n",
     "\n",
-    "#train_dataset = datasets.COCO2014Text_Dataset(ignore=target_transforms.Ignore(illegible=True), transform=transform, target_transform=target_transform, augmentation=None)\n",
+    "#train_dataset = datasets.COCO2014Text_Dataset(ignore=target_transforms.TextDetectionIgnore(illegible=True), transform=transform, target_transform=target_transform, augmentation=None)\n",
     "train_dataset = datasets.SynthTextDetectionDataset(ignore=None, transform=transform, target_transform=target_transform, augmentation=augmentation)\n",
     "\n",
     "train_loader = DataLoader(train_dataset,\n",
