--- a/demo/textboxespp/train-ICDAR2015.ipynb
+++ b/demo/textboxespp/train-ICDAR2015.ipynb
@@ -53,7 +53,7 @@
     "target_transform = target_transforms.Compose(\n",
     "    [target_transforms.Corners2Centroids(),\n",
     "     #target_transforms.ToQuadrilateral(),\n",
-    "     target_transforms.OneHot(class_nums=datasets.SynthText_class_nums, add_background=True),\n",
+    "     target_transforms.ObjectDetectionOneHot(class_nums=datasets.SynthText_class_nums, add_background=True),\n",
     "     target_transforms.ToTensor()]\n",
     ")\n",
     "\n",
@@ -1894,7 +1894,7 @@
     "target_transform = target_transforms.Compose(\n",
     "    [target_transforms.Corners2Centroids(),\n",
     "     #target_transforms.ToQuadrilateral(),\n",
-    "     target_transforms.OneHot(class_nums=datasets.SynthText_class_nums, add_background=True),\n",
+    "     target_transforms.ObjectDetectionOneHot(class_nums=datasets.SynthText_class_nums, add_background=True),\n",
     "     target_transforms.ToTensor()]\n",
     ")\n",
     "\n",
