--- a/demo/ssd/training512-voc2007.ipynb
+++ b/demo/ssd/training512-voc2007.ipynb
@@ -60,10 +60,10 @@
     ")\n",
     "target_transform = target_transforms.Compose(\n",
     "    [target_transforms.Corners2Centroids(),\n",
-    "     target_transforms.OneHot(class_nums=datasets.VOC_class_nums, add_background=True),\n",
+    "     target_transforms.ObjectDetectionOneHot(class_nums=datasets.VOC_class_nums, add_background=True),\n",
     "     target_transforms.ToTensor()]\n",
     ")\n",
-    "train_dataset = datasets.VOC2007_TrainValDataset(ignore=target_transforms.Ignore(difficult=True), transform=transform, target_transform=target_transform, augmentation=augmentation)\n",
+    "train_dataset = datasets.VOC2007_TrainValDataset(ignore=target_transforms.ObjectDetectionIgnore(difficult=True), transform=transform, target_transform=target_transform, augmentation=augmentation)\n",
     "\n",
     "train_loader = DataLoader(train_dataset,\n",
     "                          batch_size=16,\n",
