--- a/demo/textboxespp/train-FST_BDI.ipynb
+++ b/demo/textboxespp/train-FST_BDI.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ignore = target_transforms.Ignore(strange=True)\n",
+    "ignore = target_transforms.TextDetectionIgnore(strange=True)\n",
     "\n",
     "augmentation = augmentations.RandomSampled()\n",
     "#augmentation = None\n",
@@ -55,7 +55,7 @@
     "target_transform = target_transforms.Compose(\n",
     "    [target_transforms.Corners2Centroids(),\n",
     "     #target_transforms.ToQuadrilateral(),\n",
-    "     target_transforms.OneHot(class_nums=datasets.SynthText_class_nums, add_background=True),\n",
+    "     target_transforms.ObjectDetectionOneHot(class_nums=datasets.SynthText_class_nums, add_background=True),\n",
     "     target_transforms.ToTensor()]\n",
     ")\n",
     "\n",
@@ -1880,7 +1880,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ignore = target_transforms.Ignore(strange=True)\n",
+    "ignore = target_transforms.TextDetectionIgnore(strange=True)\n",
     "\n",
     "augmentation = augmentations.RandomSampled()\n",
     "#augmentation = None\n",
@@ -1893,7 +1893,7 @@
     "target_transform = target_transforms.Compose(\n",
     "    [target_transforms.Corners2Centroids(),\n",
     "     #target_transforms.ToQuadrilateral(),\n",
-    "     target_transforms.OneHot(class_nums=datasets.SynthText_class_nums, add_background=True),\n",
+    "     target_transforms.ObjectDetectionOneHot(class_nums=datasets.SynthText_class_nums, add_background=True),\n",
     "     target_transforms.ToTensor()]\n",
     ")\n",
     "\n",
