objct to objdetn

--- a/demo/ssd/training300-voc2007+2012+COCO.ipynb
+++ b/demo/ssd/training300-voc2007+2012+COCO.ipynb
@@ -68,10 +68,10 @@
     ")\n",
     "target_transform = target_transforms.Compose(\n",
     "    [target_transforms.Corners2Centroids(),\n",
-    "     target_transforms.ObjectDetectionOneHot(class_nums=datasets.COCO_class_nums, add_background=True),\n",
+    "     target_transforms.OneHot(class_nums=datasets.COCO_class_nums, add_background=True),\n",
     "     target_transforms.ToTensor()]\n",
     ")\n",
-    "train_dataset = datasets.COCO2014_TrainValDataset(ignore=target_transforms.ObjectDetectionIgnore(iscrowd=True), transform=transform, target_transform=target_transform, augmentation=augmentation)\n",
+    "train_dataset = datasets.COCO2014_TrainValDataset(ignore=target_transforms.Ignore(iscrowd=True), transform=transform, target_transform=target_transform, augmentation=augmentation)\n",
     "\n",
     "train_loader = DataLoader(train_dataset,\n",
     "                          batch_size=32,\n",
@@ -1973,11 +1973,11 @@
     ")\n",
     "target_transform = target_transforms.Compose(\n",
     "    [target_transforms.Corners2Centroids(),\n",
-    "     target_transforms.ObjectDetectionOneHot(class_nums=datasets.VOC_class_nums, add_background=True),\n",
+    "     target_transforms.OneHot(class_nums=datasets.VOC_class_nums, add_background=True),\n",
     "     target_transforms.ToTensor()]\n",
     ")\n",
     "train_dataset = datasets.Compose(datasets=(datasets.VOC2007_TrainValDataset, datasets.VOC2012_TrainValDataset),\n",
-    "                                 ignore=target_transforms.ObjectDetectionIgnore(difficult=True), transform=transform, target_transform=target_transform, augmentation=augmentation)\n",
+    "                                 ignore=target_transforms.Ignore(difficult=True), transform=transform, target_transform=target_transform, augmentation=augmentation)\n",
     "\n",
     "train_loader = DataLoader(train_dataset,\n",
     "                          batch_size=32,\n",
@@ -3828,7 +3828,7 @@
     ")\n",
     "target_transform = target_transforms.Compose(\n",
     "    [target_transforms.Corners2Centroids(),\n",
-    "     target_transforms.ObjectDetectionOneHot(class_nums=datasets.VOC_class_nums, add_background=True),\n",
+    "     target_transforms.OneHot(class_nums=datasets.VOC_class_nums, add_background=True),\n",
     "     target_transforms.ToTensor()]\n",
     ")\n",
     "\n",
