--- a/demo/ssd/training300-voc2007+2012.ipynb
+++ b/demo/ssd/training300-voc2007+2012.ipynb
@@ -16,8 +16,8 @@
     "import sys\n",
     "sys.path.append('../../')\n",
     "\n",
-    "from dl.data.object import datasets\n",
-    "from dl.data.object import transforms, target_transforms, augmentations, utils\n",
+    "from dl.data.objdetn import datasets\n",
+    "from dl.data.objdetn import transforms, target_transforms, augmentations, utils\n",
     "\n",
     "from dl.loss.ssd import SSDLoss\n",
     "from dl.models.ssd import SSD512\n",
@@ -1943,11 +1943,11 @@
     "import sys\n",
     "sys.path.append('../../')\n",
     "\n",
-    "from dl.data import datasets\n",
-    "from dl.data import transforms, target_transforms, augmentations, utils\n",
+    "from dl.data.objdetn import datasets\n",
+    "from dl.data.objdetn import transforms, target_transforms, augmentations, utils\n",
     "\n",
     "from dl.models.ssd300 import SSD300\n",
-    "from dl.train import *\n",
+    "from dl.eval import *\n",
     "\n",
     "#from torchvision import transforms > not import!!\n",
     "from torch.utils.data import DataLoader\n",
