--- a/demo/ssd/training512-voc2007.ipynb
+++ b/demo/ssd/training512-voc2007.ipynb
@@ -16,8 +16,8 @@
     "import sys\n",
     "sys.path.append('../../')\n",
     "\n",
-    "from dl.data.object import datasets\n",
-    "from dl.data.object import transforms, target_transforms, augmentations, utils\n",
+    "from dl.data.objdetn import datasets\n",
+    "from dl.data.objdetn import transforms, target_transforms, augmentations, utils\n",
     "\n",
     "from dl.loss.ssd import SSDLoss\n",
     "from dl.models.ssd import SSD512\n",
