--- a/demo/textboxespp/defaultbox.ipynb
+++ b/demo/textboxespp/defaultbox.ipynb
@@ -19,7 +19,7 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from dl.data.text import augmentations, datasets, target_transforms, transforms\n",
+    "from dl.data.txtdetn import augmentations, datasets, target_transforms, transforms\n",
     "from dl.models.ssd.textboxespp import TextBoxesPP"
    ]
   },
