--- a/demo/textboxespp/train-FST_BDI.ipynb
+++ b/demo/textboxespp/train-FST_BDI.ipynb
@@ -19,8 +19,8 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from dl.data.text import augmentations, datasets, target_transforms, transforms\n",
-    "from dl.data.text.utils import batch_ind_fn_droptexts\n",
+    "from dl.data.txtdetn import augmentations, datasets, target_transforms, transforms\n",
+    "from dl.data.txtdetn.utils import batch_ind_fn_droptexts\n",
     "from dl.models.ssd.textboxespp import TextBoxesPP\n",
     "\n",
     "from dl.loss.textboxespp import TextBoxLoss, ConfidenceLoss\n",
@@ -1857,8 +1857,8 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from dl.data.text import augmentations, datasets, target_transforms, transforms\n",
-    "from dl.data.text.utils import batch_ind_fn_droptexts\n",
+    "from dl.data.txtdetn import augmentations, datasets, target_transforms, transforms\n",
+    "from dl.data.txtdetn.utils import batch_ind_fn_droptexts\n",
     "from dl.models.ssd.textboxespp import TextBoxesPP\n",
     "\n",
     "from dl.loss.textboxespp import TextBoxLoss, ConfidenceLoss\n",
