--- a/demo/ssd/debug-defaultbox.ipynb
+++ b/demo/ssd/debug-defaultbox.ipynb
@@ -16,8 +16,8 @@
     "import sys\n",
     "sys.path.append('../../')\n",
     "\n",
-    "from dl.data.object import datasets\n",
-    "from dl.data.object import transforms, target_transforms\n",
+    "from dl.data.objdetn import datasets\n",
+    "from dl.data.objdetn import transforms, target_transforms\n",
     "from dl.models.ssd import SSD300"
    ]
   },
