--- a/demo/textboxespp/train-all.ipynb
+++ b/demo/textboxespp/train-all.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ignore = target_transforms.TextDetectionIgnore(strange=True)\n",
+    "ignore = target_transforms.Ignore(strange=True)\n",
     "\n",
     "augmentation = augmentations.RandomSampled()\n",
     "#augmentation = None\n",
@@ -1926,7 +1926,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ignore = target_transforms.TextDetectionIgnore(strange=True)\n",
+    "ignore = target_transforms.Ignore(strange=True)\n",
     "\n",
     "augmentation = augmentations.RandomSampled()\n",
     "#augmentation = None\n",
