move boxes and toVis

--- a/demo/ssd/debug-matching_strategy.ipynb
+++ b/demo/ssd/debug-matching_strategy.ipynb
@@ -16,8 +16,8 @@
     "import sys\n",
     "sys.path.append('../../')\n",
     "\n",
-    "from dl.data.object import datasets\n",
-    "from dl.data.object import transforms, target_transforms, utils\n",
+    "from dl.data.objdetn import datasets\n",
+    "from dl.data.objdetn import transforms, target_transforms, utils\n",
     "from dl.models.ssd import SSD300"
    ]
   },
@@ -54,8 +54,8 @@
     "import cv2\n",
     "import torch\n",
     "\n",
-    "from dl.models.ssd.core.boxes import centroids2corners\n",
-    "from dl.models.ssd.core.inference import toVisualizeRGBImg, tensor2cvrgbimg, toVisualizeRectangleRGBimg"
+    "from dl.data.utils.boxes import centroids2corners\n",
+    "from dl.data.utils.converter import toVisualizeRectRGBimg, tensor2cvrgbimg, toVisualizeRectLabelRGBimg"
    ]
   },
   {
@@ -873,7 +873,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fafa947d860>"
+       "<matplotlib.image.AxesImage at 0x7fd91805dba8>"
       ]
      },
      "execution_count": 4,
@@ -895,7 +895,7 @@
     "print(conf.argmax(dim=1).shape)\n",
     "\n",
     "plt.figure()\n",
-    "plt.imshow(toVisualizeRGBImg(img, loc, inf_labels=conf.argmax(dim=1), classe_labels=dataset.class_labels))"
+    "plt.imshow(toVisualizeRectLabelRGBimg(img, loc, inf_labels=conf.argmax(dim=1), classe_labels=dataset.class_labels))"
    ]
   },
   {
@@ -1739,7 +1739,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7faf8ea10f60>"
+       "<matplotlib.image.AxesImage at 0x7fd913f86d30>"
       ]
      },
      "execution_count": 6,
@@ -1748,7 +1748,7 @@
     }
    ],
    "source": [
-    "dbox_img = toVisualizeRectangleRGBimg(img, dboxes[::22], thickness=1)\n",
+    "dbox_img = toVisualizeRectRGBimg(img, dboxes[::22], thickness=1)\n",
     "    \n",
     "plt.figure()\n",
     "#plt.imshow(resized_img)\n",
@@ -2581,7 +2581,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7faf8e9ceb38>"
+       "<matplotlib.image.AxesImage at 0x7fd913f44908>"
       ]
      },
      "execution_count": 8,
@@ -2592,7 +2592,7 @@
    "source": [
     "plt.figure()\n",
     "dboxes_b = torch.cat([dboxes.unsqueeze(0)] * box_num, dim=0)\n",
-    "plt.imshow(toVisualizeRectangleRGBimg(img, dboxes_b[pos_indicator]))\n",
+    "plt.imshow(toVisualizeRectRGBimg(img, dboxes_b[pos_indicator]))\n",
     "#plt.imshow(toVisualizeImg(img, gt_locs[pos_indicator], conf_indices=gt_confs[pos_indicator].argmax(dim=1), classes=voc_classes))"
    ]
   },
@@ -3393,7 +3393,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7faf8e9f5400>"
+       "<matplotlib.image.AxesImage at 0x7fd92358ef60>"
       ]
      },
      "execution_count": 9,
@@ -3416,7 +3416,7 @@
     "\n",
     "plt.figure()\n",
     "dboxes_b = torch.cat([dboxes.unsqueeze(0)] * box_num, dim=0)\n",
-    "plt.imshow(toVisualizeRectangleRGBimg(img, dboxes_b[pos_indicator]))"
+    "plt.imshow(toVisualizeRectRGBimg(img, dboxes_b[pos_indicator]))"
    ]
   },
   {
@@ -4216,7 +4216,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7faf8e949c18>"
+       "<matplotlib.image.AxesImage at 0x7fd913f3d9e8>"
       ]
      },
      "execution_count": 10,
@@ -4239,7 +4239,7 @@
     "\n",
     "plt.figure()\n",
     "dboxes_b = torch.cat([dboxes.unsqueeze(0)] * box_num, dim=0)\n",
-    "plt.imshow(toVisualizeRectangleRGBimg(img, dboxes_b[pos_indicator]))"
+    "plt.imshow(toVisualizeRectRGBimg(img, dboxes_b[pos_indicator]))"
    ]
   },
   {
