--- a/demo/crnn/debug-dataset.ipynb
+++ b/demo/crnn/debug-dataset.ipynb
@@ -32,7 +32,7 @@
      "output_type": "stream",
      "text": [
       "INFO:root:Loading ground truth...\n",
-      "INFO:root:Loaded! 23.496822834014893s\n"
+      "INFO:root:Loaded! 23.263208389282227s\n"
      ]
     }
    ],
@@ -43,9 +43,9 @@
     "     transforms.ToTensor()]\n",
     ")\n",
     "target_transform = target_transforms.Compose(\n",
-    "    [\n",
-    "     #target_transforms.ToTensor()\n",
-    "    ]\n",
+    "    [target_transforms.Text2Number(class_labels=datasets.ALPHANUMERIC_LABELS),\n",
+    "     target_transforms.OneHot(class_nums=datasets.ALPHANUMERIC_NUMBERS, add_nolabel=False),\n",
+    "     target_transforms.ToTensor()]\n",
     ")\n",
     "train_dataset = datasets.SynthTextRecognitionDataset(transform=transform, target_transform=target_transform)\n"
    ]
@@ -73,7 +73,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('I',)\n"
+      "(tensor([[0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+      "         0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]]),)\n"
      ]
     },
     {
@@ -869,7 +870,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('n', 'o', 't')\n"
+      "(tensor([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0.,\n",
+      "         0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+      "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0.,\n",
+      "         0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+      "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+      "         0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]]),)\n"
      ]
     },
     {
@@ -1665,7 +1671,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('t', 'i', 'm', 'e')\n"
+      "(tensor([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+      "         0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+      "        [0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+      "         0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+      "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0.,\n",
+      "         0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+      "        [0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+      "         0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]]),)\n"
      ]
     },
     {
@@ -2461,7 +2474,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('y', 'o', 'u')\n"
+      "(tensor([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+      "         0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+      "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0.,\n",
+      "         0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+      "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+      "         0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]]),)\n"
      ]
     },
     {
