--- a/demo/ssd/training300-voc2007+2012+COCO.ipynb
+++ b/demo/ssd/training300-voc2007+2012+COCO.ipynb
@@ -99,7 +99,7 @@
      "output_type": "stream",
      "text": [
       "SSD300(\n",
-      "  (codec): Codec(\n",
+      "  (codec): SSDCodec(\n",
       "    (encoder): Encoder()\n",
       "    (decoder): Decoder()\n",
       "  )\n",
@@ -1998,7 +1998,7 @@
      "output_type": "stream",
      "text": [
       "SSD300(\n",
-      "  (codec): Codec(\n",
+      "  (codec): SSDCodec(\n",
       "    (encoder): Encoder()\n",
       "    (decoder): Decoder()\n",
       "  )\n",
