--- a/demo/ssd/training300-voc2007+2012.ipynb
+++ b/demo/ssd/training300-voc2007+2012.ipynb
@@ -92,7 +92,7 @@
      "output_type": "stream",
      "text": [
       "SSD300(\n",
-      "  (codec): Codec(\n",
+      "  (codec): SSDCodec(\n",
       "    (encoder): Encoder()\n",
       "    (decoder): Decoder()\n",
       "  )\n",
