--- a/demo/ssd/training512-voc2007.ipynb
+++ b/demo/ssd/training512-voc2007.ipynb
@@ -91,7 +91,7 @@
      "output_type": "stream",
      "text": [
       "SSD512(\n",
-      "  (codec): Codec(\n",
+      "  (codec): SSDCodec(\n",
       "    (encoder): Encoder()\n",
       "    (decoder): Decoder()\n",
       "  )\n",
