--- a/demo/crnn/train-synthtext.ipynb
+++ b/demo/crnn/train-synthtext.ipynb
@@ -1017,10 +1017,10 @@
    "source": [
     "optimizer = Adadelta(model.parameters())\n",
     "\n",
-    "save_manager = SaveManager(modelname='crnn-synthtext', interval=1000000, max_checkpoints=15, plot_interval=5000)\n",
+    "save_manager = SaveManager(modelname='crnn-synthtext-e', interval=1, max_checkpoints=20, plot_interval=1)\n",
     "\n",
     "trainer = TrainObjectRecognitionJupyterLogger(LiveGraph(yrange=(0, 2)), CTCLoss(blank=model.blankIndex, zero_infinity=True, reduction='mean'), model, optimizer)\n",
-    "trainer.train_iter(save_manager, 100000000, train_loader)  # , evaluator=VOC2007Evaluator(val_dataset, iteration_interval=10))"
+    "trainer.train_iter(save_manager, 500, train_loader)  # , evaluator=VOC2007Evaluator(val_dataset, iteration_interval=10))"
    ]
   }
  ],
