--- a/demo/fots/debug_roirotate.ipynb
+++ b/demo/fots/debug_roirotate.ipynb
@@ -9622,8 +9622,8 @@
     "    \n",
     "    roiRotate =  RoIRotate(height=8, _debug=True)\n",
     "    dummy_pred_locs = torch.arange(h*w*6).reshape((1, h, w, 6))\n",
-    "    true_locs = [targets]\n",
-    "\n",
+    "    #true_locs = [targets]\n",
+    "    true_locs = [targets[:, 4:12]]\n",
     "    \n",
     "    \n",
     "    imgs = roiRotate(img.unsqueeze(0), dummy_pred_locs, true_locs)\n",
@@ -9645,7 +9645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -19218,8 +19218,8 @@
     "    \n",
     "    roiRotate =  RoIRotate(height=8)\n",
     "    dummy_pred_locs = torch.arange(h*w*6).reshape((1, h, w, 6))\n",
-    "    true_locs = [targets]\n",
-    "\n",
+    "    #true_locs = [targets]\n",
+    "    true_locs = [targets[:, 4:12]]\n",
     "    \n",
     "    converted_imgs = roiRotate(img.unsqueeze(0), dummy_pred_locs, true_locs)\n",
     "    for i, conv_img in enumerate(converted_imgs[0]):\n",
