--- a/demo/fots/debug_roirotate.ipynb
+++ b/demo/fots/debug_roirotate.ipynb
@@ -9621,12 +9621,11 @@
     "    c, h, w = img.shape\n",
     "    \n",
     "    roiRotate =  RoIRotate(height=8, _debug=True)\n",
-    "    dummy_pred_locs = torch.arange(h*w*6).reshape((1, h, w, 6))\n",
     "    #true_locs = [targets]\n",
     "    true_locs = [targets[:, 4:12]]\n",
     "    \n",
     "    \n",
-    "    imgs = roiRotate(img.unsqueeze(0), dummy_pred_locs, true_locs)\n",
+    "    imgs = roiRotate(img.unsqueeze(0), true_locs)\n",
     "    for i, img in enumerate(imgs[0]):\n",
     "        print(''.join([datasets.SynthText_char_labels_without_upper_blank[c.item()] for c in texts[i]]))\n",
     "        plt.figure()\n",
@@ -16027,7 +16026,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/kado/.pyenv/versions/anaconda3-2019.07/envs/dl/lib/python3.6/site-packages/ipykernel_launcher.py:18: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n"
+      "/home/kado/.pyenv/versions/anaconda3-2019.07/envs/dl/lib/python3.6/site-packages/ipykernel_launcher.py:17: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n"
      ]
     },
     {
@@ -19217,11 +19216,10 @@
     "    c, h, w = img.shape\n",
     "    \n",
     "    roiRotate =  RoIRotate(height=8)\n",
-    "    dummy_pred_locs = torch.arange(h*w*6).reshape((1, h, w, 6))\n",
     "    #true_locs = [targets]\n",
     "    true_locs = [targets[:, 4:12]]\n",
     "    \n",
-    "    converted_imgs = roiRotate(img.unsqueeze(0), dummy_pred_locs, true_locs)\n",
+    "    converted_imgs = roiRotate(img.unsqueeze(0), true_locs)\n",
     "    for i, conv_img in enumerate(converted_imgs[0]):\n",
     "        print(''.join([datasets.SynthText_char_labels_without_upper_blank[c.item()] for c in texts[i]]))\n",
     "        img = tensor2cvrgbimg(conv_img)\n",
