--- a/demo/ssd/debug-matching_strategy.ipynb
+++ b/demo/ssd/debug-matching_strategy.ipynb
@@ -873,7 +873,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fd91805dba8>"
+       "<matplotlib.image.AxesImage at 0x7f3d2e1be978>"
       ]
      },
      "execution_count": 4,
@@ -923,7 +923,7 @@
     }
    ],
    "source": [
-    "from dl.models.ssd.core.boxes import matching_strategy\n",
+    "from dl.models.ssd.core.utils import matching_strategy\n",
     "\n",
     "model.load_vgg_weights()\n",
     "\n",
@@ -1739,7 +1739,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fd913f86d30>"
+       "<matplotlib.image.AxesImage at 0x7f3d2e18db00>"
       ]
      },
      "execution_count": 6,
@@ -2581,7 +2581,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fd913f44908>"
+       "<matplotlib.image.AxesImage at 0x7f3d2e14d6d8>"
       ]
      },
      "execution_count": 8,
@@ -3393,7 +3393,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fd92358ef60>"
+       "<matplotlib.image.AxesImage at 0x7f3d2e1e2518>"
       ]
      },
      "execution_count": 9,
@@ -4216,7 +4216,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fd913f3d9e8>"
+       "<matplotlib.image.AxesImage at 0x7f3d2e0c7780>"
       ]
      },
      "execution_count": 10,
