augmentation bug fixed

--- a/demo/fots/debug_roirotate.ipynb
+++ b/demo/fots/debug_roirotate.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dl.models.fots.roi import RoIRotate\n",
+    "from dl.models.fots.modules.roi import RoIRotate\n",
     "\n",
     "%matplotlib notebook\n",
     "import matplotlib.pyplot as plt\n",
