--- a/demo/fots/debug_utils.ipynb
+++ b/demo/fots/debug_utils.ipynb
@@ -25,17 +25,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([[0. , 1. , 1. , 0. , 1. , 0. , 0. , 1. ],\n",
-       "       [0.3, 0.2, 1. , 0.2, 0.8, 1. , 0.2, 0.4]])"
+       "       [0.3, 0.2, 1. , 0.2, 0.8, 1. , 0.2, 0.4],\n",
+       "       [0. , 0. , 1. , 1. , 1. , 1. , 0. , 0. ]])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +44,7 @@
    "source": [
     "from dl.data.utils.quads import sort_clockwise_topleft_numpy\n",
     "\n",
-    "quads=np.array([[1,0,0,1,1,0,0,1],[0.2,0.4,0.3,0.2,1,0.2,0.8,1]])\n",
+    "quads=np.array([[1,0,0,1,1,0,0,1],[0.2,0.4,0.3,0.2,1,0.2,0.8,1],[0,0,1,1,0,0,1,1]])\n",
     "sort_clockwise_topleft_numpy(quads)"
    ]
   },
