add inside parameters

--- a/demo/fots/train_synthtext.ipynb
+++ b/demo/fots/train_synthtext.ipynb
@@ -352,7 +352,7 @@
     "                          num_workers=4,\n",
     "                          pin_memory=True)\n",
     "\n",
-    "model = FOTSRes50(chars=datasets.SynthText_char_labels_without_upper_blank, input_shape=(None, None, 3)).cuda()\n",
+    "model = FOTSRes50(chars=datasets.SynthText_char_labels_without_upper_blank, input_shape=(None, None, 3), feature_height=8).cuda()\n",
     "print(model)\n"
    ]
   },
